# boom.js

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
api/: CMakeLists.txt
api/include/Boom/: API.hpp
api/include/Boom/API/: App.hpp  Console.hpp  File.hpp  Math.hpp  Process.hpp
api/src/: App.cpp  App.d.ts  Console.cpp  File.cpp  File.d.ts  Input.cpp  Math.cpp  Math.d.ts  Process.cpp  Utilities.d.ts  Window.cpp  Window.d.ts
cli/: CMakeLists.txt  package.json  pnpm-lock.yaml
cli/src/: main.cpp  main.ts
cli/src/help/: help.ts
doc/example/TestApp/: CMakeLists.txt  make.config.json
doc/example/TestApp/src/: main.cpp
doc/example/TestApp/src/Content/: Content.hpp
doc/example/TestApp/src/Header/: Header.cpp  Header.hpp
doc/example/TestApp/src/Sidebar/: Sidebar.hpp
doc/example/TestCppApp/: CMakeLists.txt
doc/example/TestCppApp/src/: main.cpp
doc/example/TestCppApp/src/Content/: Content.cpp  Content.hpp
doc/example/TestCppApp/src/Sidebar/: Sidebar.cpp
doc/example/TestCppApp/task/clean/: index.js
js/: CMakeLists.txt
js/include/Boom/: JS.hpp
js/include/Boom/JS/: Class.hpp  Context.hpp  Scope.hpp  Types.hpp  Value.hpp
js/src/: Class.cpp  Context.cpp  Scope.cpp  Value.cpp
js/src/JSC/: Class.cpp  Class.hpp  Context.cpp  Scope.hpp  Value.cpp
lib/: CMakeLists.txt
lib/include/: Boom.hpp
lib/include/Boom/: Alert.hpp  App.hpp  Buffer.hpp  Emitter.hpp  File.hpp  GraphicsView.hpp  Image.hpp  Math.hpp  Memory.hpp  Node.hpp  Paint.hpp  Sleep.hpp  Stream.hpp  Time.hpp  Utilities.hpp  Window.hpp
lib/include/Boom/API/: Console.hpp
lib/lib/JSC/lib/win32/x86_64/: JavaScriptCore.lib
lib/src/: Alert.cpp  App.cpp  Buffer.cpp  Color.cpp  Emitter.cpp  Error.cpp  File.cpp  GraphicsView.cpp  Image.cpp  Math.cpp  Menu.cpp  Node.cpp  Paint.cpp  Surface.cpp  Utilities.cpp  Window.cpp
lib/src/API/: Application.cpp  View.d.ts
lib/src/CLI/: main.cpp
lib/src/JS/: Context.cpp
lib/src/Linux/GTK4/: View.hpp
lib/src/MacOS/: Input.mm  Menu.mm  Window.mm
lib/src/OpenGL/: Context.hpp  Image.hpp  OpenGL.hpp  Paint.cpp  Shaders.cpp  Shaders.hpp  Surface.hpp
lib/src/OpenGL/MacOS/: Context.hpp  Context.mm  Surface.mm
lib/src/OpenGL2/: Context.cpp
lib/src/POSIX/: File.cpp  Sleep.cpp  Time.cpp
lib/src/Win32/: Application.hpp  Menu.cpp  View.hpp
pkg/api/: CMakeLists.txt
pkg/api/include/Boom/: API.hpp
pkg/api/include/Boom/API/: File.hpp  Input.hpp  Utilities.hpp  View.hpp  Window.hpp
pkg/api/src/: App.cpp  Application.cpp  Application.d.ts  Console.cpp  File.cpp  Math.cpp  Process.cpp  Process.d.ts  Utilities.cpp  View.cpp  View.d.ts  Window.cpp  Window.d.ts
pkg/boom-lib/: CMakeLists.txt
pkg/boom-lib/include/: Boom.hpp
pkg/boom-lib/include/Boom/: Color.hpp  ContentView.hpp  Emitter.hpp  Font.hpp  GraphicsView.hpp  Image.hpp  Memory.hpp  Node.hpp  OpenGL.hpp  Paint.hpp  Shaders.hpp  Surface.hpp  Utilities.hpp
pkg/boom-lib/include/Boom/API/: Application.hpp  Math.hpp  Utilities.hpp
pkg/boom-lib/include/Boom/JS/: Class.hpp  Scope.hpp  Types.hpp  Value.hpp
pkg/boom-lib/src/: ContentView.cpp  GraphicsView.cpp  Image.cpp  Input.cpp  Math.cpp  OpenGL.hpp  Paint.cpp  Runner.cpp  Shaders.cpp  Surface.cpp  Timer.cpp  Utilities.cpp
pkg/boom-lib/src/API/: Console.d.ts  File.d.ts  Image.d.ts  Input.cpp  Input.d.ts  Node.d.ts  OpenGL.d.ts  Timeout.d.ts  View.d.ts  Window.cpp
pkg/boom-lib/src/JS/: Class.cpp  Value.cpp
pkg/boom-lib/src/JS/JSC/: Context.cpp  Value.cpp
pkg/boom-lib/src/Linux/GTK4/: App.hpp  OpenGL.cpp  Window.cpp
pkg/boom-lib/src/MacOS/: Alert.mm  OpenGL.mm  Window.hpp
pkg/boom-lib/src/OpenGL/: Context.cpp
pkg/boom-lib/src/OpenGL/MacOS/: Surface.hpp
pkg/boom-lib/src/OpenGL/Win32/: Surface.cpp
pkg/boom-lib/src/OpenGL2/: Image.cpp  Paint.cpp  Surface.cpp  Surface.hpp
pkg/boom-lib/src/Win32/: OpenGL.cpp  Sleep.cpp
pkg/cli/: CMakeLists.txt  pnpm-lock.yaml  tsconfig.json
pkg/cli/src/: compat.js  main.cpp  main.ts
pkg/cli/src/Run/: Run.cpp
pkg/cli/src/run/: run.ts
pkg/cli/src/utilities/: abort.ts
pkg/js/: CMakeLists.txt
pkg/js/include/Boom/: JS.hpp
pkg/js/include/Boom/JS/: Class.hpp  Context.hpp  Poller.hpp  Scope.hpp  Types.hpp  Value.hpp
pkg/js/src/: Class.cpp  Context.cpp  Poller.cpp  Scope.cpp  Value.cpp
pkg/js/src/JSC/: Context.cpp  Context.hpp  Scope.cpp  Scope.hpp  Value.cpp  Value.hpp
pkg/js/task/clean/: index.js
pkg/lib/: CMakeLists.txt  make.config.json
pkg/lib/include/: Boom.hpp
pkg/lib/include/Boom/: Alert.hpp  App.hpp  Application.hpp  Brush.hpp  Buffer.hpp  ContentView.hpp  Emitter.hpp  Emitter2.hpp  Error.hpp  File.hpp  Font.hpp  GraphicsView.hpp  Image.hpp  JS.hpp  Loop.hpp  Mashroom.hpp  Memory.hpp  Menu.hpp  Node.hpp  OpenGL.hpp  Paint.hpp  RunLoop.hpp  Store.hpp  Surface.hpp  Text.hpp  Timer.hpp  Utilities.hpp  View.hpp  Window.hpp
pkg/lib/src/: App.cpp  Application.cpp  Brush.cpp  Buffer.cpp  ContentView.cpp  Error.cpp  File.cpp  Font.cpp  GraphicsView.cpp  Image.cpp  Input.cpp  Loop.cpp  Math.cpp  Menu.cpp  Node.cpp  OpenGL.cpp  OpenGL.hpp  Paint.cpp  RunLoop.cpp  Store.cpp  Surface.cpp  Timer.cpp  Utilities.cpp  View.cpp  Window.cpp
pkg/lib/src/API/: File.cpp  Process.cpp  View.cpp
pkg/lib/src/JS/JSC/: Scope.cpp
pkg/lib/src/Linux/: File.cpp  Window.cpp
pkg/lib/src/Linux/GTK4/: App.cpp  OpenGL.cpp  View.cpp  Window.cpp  Window.hpp
pkg/lib/src/MacOS/: App.mm  Application.mm  Font.cpp  Input.mm  OpenGL.mm  Window.mm
pkg/lib/src/OpenGL/: Context.hpp  OpenGL.hpp
pkg/lib/src/OpenGL/Linux/: Context.cpp  Context.hpp  Surface.cpp
pkg/lib/src/OpenGL/MacOS/: Surface.mm
pkg/lib/src/OpenGL/Win32/: Context.cpp  Surface.cpp  Surface.hpp
pkg/lib/src/OpenGL2/: Context.cpp  Context.hpp  Image.cpp  Image.hpp  Paint.cpp  Shaders.cpp  Shaders.hpp  Surface.cpp
pkg/lib/src/POSIX/: File.cpp
pkg/lib/src/Win32/: Alert.cpp  App.cpp  App.hpp  Application.cpp  File.cpp  Font.cpp  Input.cpp  Menu.cpp  OpenGL.cpp  RunLoop.cpp  Time.cpp  Timer.cpp  View.cpp  View.hpp  Window.cpp  Window.hpp
pkg/lib/task/opengl/: defs.json  glad.h  index.js
src/: GraphicsView.cpp
task/: common.js
(+56 files in other folders)
