cmake_minimum_required(VERSION 3.26)

project(boom)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 23)
set(BOOM_JSC_VERSION jsc-7617.1.4.3)
set(BOOM_INCLUDE ${BOOM_INCLUDE} ${CMAKE_SOURCE_DIR}/include)
set(BOOM_INCLUDE ${BOOM_INCLUDE} ${CMAKE_SOURCE_DIR}/lib/${BOOM_JSC_VERSION}/include)

file(GLOB BOOM_LIB_SRC src/*.cpp src/JS/*.cpp src/JS/JSC/*.cpp src/API/*.cpp)
file(GLOB_RECURSE BOOM_CLI_SRC src/CLI/*.cpp)

if (${MSVC})
    set(BOOM_CFLAGS ${BOOM_CFLAGS} /Zi /wd4100 /wd4191 /wd4365 /wd4456 /wd4464 /wd4505 /wd4514 /wd4623 /wd4625 /wd4626 /wd4702 /wd4820 /wd4868 /wd5246 /wd4820 /wd5026 /wd5027 /wd5045 /wd4244 /wd4267 /wd5219)
else()
    set(BOOM_CFLAGS ${BOOM_CFLAGS} -Wall)
    if (${CMAKE_BUILD_TYPE} MATCHES "Debug")
        set(BOOM_CFLAGS ${BOOM_CFLAGS} -fsanitizer=address -g)
    else()
        set(BOOM_CFLAGS ${BOOM_CFLAGS} -O3)
    endif()
endif()

if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    if (${CMAKE_BUILD_TYPE} MATCHES "Debug")
        set(MSBUILD_TARGET_OUTPUT Debug/Debug)
    elseif(${CMAKE_BUILD_TYPE} MATCHES "Release")
        set(MSBUILD_TARGET_OUTPUT Release/Release)
    endif()

    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} Shcore.lib)
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} opengl32.lib)
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} ${CMAKE_SOURCE_DIR}/lib/${BOOM_JSC_VERSION}/lib/win32/x86_64/JavaScriptCore.lib)
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} ${CMAKE_SOURCE_DIR}/.cmake/${MSBUILD_TARGET_OUTPUT}/boom.lib)

    file(GLOB BOOM_LIB_SRC ${BOOM_LIB_SRC} src/Win32/*.cpp)
    file(COPY ${CMAKE_SOURCE_DIR}/lib/${BOOM_JSC_VERSION}/lib/win32/x86_64/JavaScriptCore.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    file(COPY ${CMAKE_SOURCE_DIR}/lib/${BOOM_JSC_VERSION}/lib/win32/x86_64/WTF.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    file(COPY ${CMAKE_SOURCE_DIR}/lib/${BOOM_JSC_VERSION}/lib/win32/x86_64/icudt73.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    file(COPY ${CMAKE_SOURCE_DIR}/lib/${BOOM_JSC_VERSION}/lib/win32/x86_64/icuin73.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    file(COPY ${CMAKE_SOURCE_DIR}/lib/${BOOM_JSC_VERSION}/lib/win32/x86_64/icuuc73.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    file(COPY ${CMAKE_SOURCE_DIR}/lib/${BOOM_JSC_VERSION}/lib/win32/x86_64/icuio73.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    file(COPY ${CMAKE_SOURCE_DIR}/lib/${BOOM_JSC_VERSION}/lib/win32/x86_64/icutu73.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} ${CMAKE_SOURCE_DIR}/.cmake/${CMAKE_BUILD_TYPE}/libboom.a)

    file(GLOB BOOM_LIB_SRC ${BOOM_LIB_SRC} src/POSIX/*.cpp src/Linux/*.cpp src/Linux/GTK4/*.cpp)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    set(BOOM_CFLAGS -DGL_SILENCE_DEPRECATION -fobjc-arc)
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} "-framework Cocoa")
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} "-framework OpenGL")
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} "-framework JavaScriptCore")
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} ${CMAKE_SOURCE_DIR}/.cmake/${CMAKE_BUILD_TYPE}/libboom.a)

    file(GLOB BOOM_LIB_SRC ${BOOM_LIB_SRC} src/POSIX/*.cpp src/MacOS/*.cpp src/MacOS/*.mm)
endif()

include_directories(${BOOM_INCLUDE})
add_compile_options(${BOOM_CFLAGS})
add_library(boom ${BOOM_LIB_SRC})
link_libraries(${BOOM_LIBRARIES})
add_executable(cli ${BOOM_CLI_SRC})