cmake_minimum_required(VERSION 3.26)

project(boom)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 23)
set(BOOM_JSC_VERSION jsc-7617.1.4.3)
set(BOOM_INCLUDE ${BOOM_INCLUDE} ${CMAKE_SOURCE_DIR}/include)
set(BOOM_INCLUDE ${BOOM_INCLUDE} ${CMAKE_SOURCE_DIR}/lib/${BOOM_JSC_VERSION}/include)

file(GLOB BOOM_RUN_SRC src/Runner.cpp)
file(GLOB BOOM_LIB_SRC src/*.cpp src/JS/*.cpp src/JS/JSC/*.cpp src/API/*.cpp)
list(REMOVE_ITEM BOOM_LIB_SRC ${CMAKE_SOURCE_DIR}/src/Runner.cpp)

if (${MSVC})
    set(BOOM_CFLAGS ${BOOM_CFLAGS} /bigobj /Zi /wd4100 /wd4191 /wd4365 /wd4456 /wd4464 /wd4505 /wd4514 /wd4623 /wd4625 /wd4626 /wd4702 /wd4820 /wd4868 /wd5246 /wd4820 /wd5026 /wd5027 /wd5045 /wd4244 /wd4267 /wd5219)
else()
    set(BOOM_CFLAGS ${BOOM_CFLAGS} -Wall)
    if (${CMAKE_BUILD_TYPE} MATCHES "Debug")
        set(BOOM_CFLAGS ${BOOM_CFLAGS} -fsanitize=address -g)
    else()
        set(BOOM_CFLAGS ${BOOM_CFLAGS} -O3)
    endif()
endif()

if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    file(GLOB BOOM_LIB_SRC ${BOOM_LIB_SRC} src/Win32/*.cpp)
    file(COPY ${CMAKE_SOURCE_DIR}/lib/${BOOM_JSC_VERSION}/lib/windows-x64/JavaScriptCore.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    file(COPY ${CMAKE_SOURCE_DIR}/lib/${BOOM_JSC_VERSION}/lib/windows-x64/WTF.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    file(COPY ${CMAKE_SOURCE_DIR}/lib/${BOOM_JSC_VERSION}/lib/windows-x64/icudt73.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    file(COPY ${CMAKE_SOURCE_DIR}/lib/${BOOM_JSC_VERSION}/lib/windows-x64/icuin73.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    file(COPY ${CMAKE_SOURCE_DIR}/lib/${BOOM_JSC_VERSION}/lib/windows-x64/icuuc73.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    file(COPY ${CMAKE_SOURCE_DIR}/lib/${BOOM_JSC_VERSION}/lib/windows-x64/icuio73.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    file(COPY ${CMAKE_SOURCE_DIR}/lib/${BOOM_JSC_VERSION}/lib/windows-x64/icutu73.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} Shcore.lib)
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} opengl32.lib)
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} ${CMAKE_SOURCE_DIR}/lib/${BOOM_JSC_VERSION}/lib/windows-x64/JavaScriptCore.lib)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    file(GLOB BOOM_LIB_SRC ${BOOM_LIB_SRC} src/POSIX/*.cpp src/Linux/*.cpp src/Linux/GTK4/*.cpp)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    file(GLOB BOOM_LIB_SRC ${BOOM_LIB_SRC} src/POSIX/*.cpp src/MacOS/*.cpp src/MacOS/*.mm)
    set(BOOM_CFLAGS -DGL_SILENCE_DEPRECATION -fobjc-arc)
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} "-framework Cocoa")
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} "-framework OpenGL")
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} "-framework JavaScriptCore")
endif()

include_directories(${BOOM_INCLUDE})
add_compile_options(${BOOM_CFLAGS})
add_library(boomlib ${BOOM_LIB_SRC})
link_libraries(${BOOM_LIBRARIES} boomlib)
add_executable(boom ${BOOM_RUN_SRC})