cmake_minimum_required(VERSION 3.26)

project(boom)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 23)
set(BOOM_CFLAGS -D__JSC__)
set(BOOM_INCLUDE ${CMAKE_SOURCE_DIR}/include)
set(BOOM_INCLUDE ${BOOM_INCLUDE} ${CMAKE_SOURCE_DIR}/../lib/include)
set(BOOM_INCLUDE ${BOOM_INCLUDE} ${CMAKE_SOURCE_DIR}/../api/include)
set(BOOM_INCLUDE ${BOOM_INCLUDE} ${CMAKE_SOURCE_DIR}/../js/include)

file(GLOB BOOM_SRC src/main.cpp ${CMAKE_BINARY_DIR}/embed.cpp)

if (${MSVC})
    set(BOOM_CFLAGS ${BOOM_CFLAGS} /wd4100 /wd4191 /wd4365 /wd4456 /wd4464 /wd4505 /wd4514 /wd4623 /wd4625 /wd4626 /wd4702 /wd4820 /wd4868 /wd5246 /wd4820 /wd5026 /wd5027 /wd5045 /wd4244 /wd4267 /wd5219)
else()
    set(BOOM_CFLAGS ${BOOM_CFLAGS} -Wall)
    if (${CMAKE_BUILD_TYPE} MATCHES "Debug")
        set(BOOM_CFLAGS ${BOOM_CFLAGS} -fsanitizer=address -g)
        set(BOOM_LFLAGS ${BOOM_LFLAGS} -fsanitizer=address -g)
    else()
        set(BOOM_CFLAGS ${BOOM_CFLAGS} -O3)
    endif()
endif()

if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    if (${CMAKE_BUILD_TYPE} MATCHES "Debug")
        set(MSBUILD_TARGET_OUTPUT Debug/Debug)
    elseif(${CMAKE_BUILD_TYPE} MATCHES "Release")
        set(MSBUILD_TARGET_OUTPUT Release/Release)
    endif()

    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} Shcore.lib)
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} opengl32.lib)
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} ${CMAKE_SOURCE_DIR}/../../lib/JSC/lib/win32/x86_64/JavaScriptCore.lib)
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} ${CMAKE_SOURCE_DIR}/../lib/.build/${MSBUILD_TARGET_OUTPUT}/boom.lib)
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} ${CMAKE_SOURCE_DIR}/../js/.build/${MSBUILD_TARGET_OUTPUT}/boomjs.lib)
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} ${CMAKE_SOURCE_DIR}/../api/.build/${MSBUILD_TARGET_OUTPUT}/boomapi.lib)

    file(COPY ${CMAKE_SOURCE_DIR}/../../lib/JSC/lib/win32/x86_64/JavaScriptCore.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    file(COPY ${CMAKE_SOURCE_DIR}/../../lib/JSC/lib/win32/x86_64/WTF.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    file(COPY ${CMAKE_SOURCE_DIR}/../../lib/JSC/lib/win32/x86_64/icudt73.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    file(COPY ${CMAKE_SOURCE_DIR}/../../lib/JSC/lib/win32/x86_64/icuin73.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    file(COPY ${CMAKE_SOURCE_DIR}/../../lib/JSC/lib/win32/x86_64/icuuc73.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    file(COPY ${CMAKE_SOURCE_DIR}/../../lib/JSC/lib/win32/x86_64/icuio73.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    file(COPY ${CMAKE_SOURCE_DIR}/../../lib/JSC/lib/win32/x86_64/icutu73.dll DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} ${CMAKE_SOURCE_DIR}/../lib/.build/${CMAKE_BUILD_TYPE}/libboom.a)
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} ${CMAKE_SOURCE_DIR}/../js/.build/${CMAKE_BUILD_TYPE}/libboomjs.a)
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} ${CMAKE_SOURCE_DIR}/../api/.build/${CMAKE_BUILD_TYPE}/libboomapi.a)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} "-framework Cocoa")
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} "-framework OpenGL")
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} "-framework JavaScriptCore")
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} ${CMAKE_SOURCE_DIR}/../lib/.build/${CMAKE_BUILD_TYPE}/libboom.a)
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} ${CMAKE_SOURCE_DIR}/../js/.build/${CMAKE_BUILD_TYPE}/libboomjs.a)
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} ${CMAKE_SOURCE_DIR}/../api/.build/${CMAKE_BUILD_TYPE}/libboomapi.a)
endif()

link_libraries(${BOOM_LIBRARIES})
include_directories(${BOOM_INCLUDE})
add_compile_options(${BOOM_CFLAGS})
add_executable(boom ${BOOM_SRC})