cmake_minimum_required(VERSION 3.26)

project(TestCppApp)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 23)
set(BOOM_FLAGS -D__JSC__)
set(BOOM_INCLUDE ${CMAKE_SOURCE_DIR}/src)
set(BOOM_INCLUDE ${BOOM_INCLUDE} ${CMAKE_SOURCE_DIR}/../../../lib/include)

file(GLOB_RECURSE BOOM_SRC src/*.cpp)

if (${MSVC})
    set(BOOM_FLAGS ${BOOM_FLAGS} /wd4100 /wd4191 /wd4365 /wd4456 /wd4464 /wd4505 /wd4514 /wd4623 /wd4625 /wd4626 /wd4702 /wd4820 /wd4868 /wd5246 /wd4820 /wd5026 /wd5027 /wd5045 /wd4244 /wd4267 /wd5219)
else()
    set(BOOM_FLAGS ${BOOM_FLAGS} -Wall)
endif()

if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    if (${CMAKE_BUILD_TYPE} MATCHES "Debug")
        set(MSBUILD_TARGET_OUTPUT Debug/Debug)
    elseif(${CMAKE_BUILD_TYPE} MATCHES "Release")
        set(MSBUILD_TARGET_OUTPUT Release/Release)
    endif()
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} Shcore.lib)
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} opengl32.lib)
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} ${CMAKE_SOURCE_DIR}/../../../lib/.build/${MSBUILD_TARGET_OUTPUT}/boom.lib)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} "GL")
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} ${CMAKE_SOURCE_DIR}/../../../lib/.build/${CMAKE_BUILD_TYPE}/libboom.a)
elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} "-framework Cocoa")
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} "-framework OpenGL")
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} "-framework JavaScriptCore")
    set(BOOM_LIBRARIES ${BOOM_LIBRARIES} ${CMAKE_SOURCE_DIR}/../../../lib/.build/${CMAKE_BUILD_TYPE}/libboom.a)
endif()

link_libraries(${BOOM_LIBRARIES})
include_directories(${BOOM_INCLUDE})
add_compile_options(${BOOM_FLAGS})
add_executable(TestCppApp ${BOOM_SRC})